# secret-santa

./: .env.example  .gitignore  Dockerfile.dev  README.md  docker-compose.dev.yaml  package-lock.json  pyproject.toml
src/project/: settings.py  urls.py
src/secret_santa/: apps.py  models.py  views.py
src/secret_santa/migrations/: 0001_initial.py
src/secret_santa/templates/: _base.html  index.html  layout.html
src/static/src/: input.css  output.css
