[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "secret-santa"
version = "0.1.0"
description = "Secret Santa app"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "Django>=5.1,<6.0",
  "psycopg[binary]>=3.2,<4.0",
  "django-compressor>=4.1"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-django>=4.9",
  "ruff>=0.9",
  "black>=24.10",
]
prod = [
  "gunicorn>=23.0",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["test_*.py", "*_test.py", "tests.py"]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
